# romaji-to-kana

./: README.md  pyproject.toml
src/rtk/: hiraganas.py  katakanas.py  main.py
tests/: test_to_hiragana.py  test_to_hiraganas.py  test_to_katakana.py
