[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rtk"
version = "1.0.0"
authors = [
  { name="Sugihiru", email="sugiuro.dev@gmail.com" },
]
readme = "README.md"
requires-python = ">=3.11"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
